resolved the issues from the review, added a new background, and fixed the misalignment of the background

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;700&display=swap');
 
 body {
   width: 375px;
@@ -185,7 +185,7 @@ nav {
 }
 
 .back {
-  width: 88px;
+  width: 91px;
   height: 16px;
   font-family: 'Poppins', sans-serif;
   font-style: normal;
@@ -351,7 +351,8 @@ nav {
 .contactme {
   background-image: url(../img/contact.png);
   padding-top: 2.5em;
-  height: 675px;
+  background-repeat: no-repeat;
+  height: 726px;
 }
 
 .contactme h2 {
@@ -364,6 +365,7 @@ nav {
   align-items: center;
   text-align: center;
   color: #fff;
+  margin-top: 39px;
 }
 
 .contacttext {
@@ -376,13 +378,16 @@ nav {
   line-height: 28px;
   text-align: center;
   color: #ebebff;
-  margin: 0 0 0 20px;
+  margin: 0 0 -4px 19px;
+  width: 332px;
 }
 
 .contactform {
-  padding-top: 1em;
-  background-image: url(../img/background.png);
+  padding-top: 2em;
+  background-image: url(../img/00.svg);
   background-repeat: no-repeat;
+  background-position-x: 9em;
+  background-size: contain;
 }
 
 .contactform > form {
@@ -398,14 +403,14 @@ nav {
   font-size: 17px;
   letter-spacing: 0.03em;
   color: #6070ff;
-  margin: 8px 0 21px 12px;
+  margin: 8px 0 25px 25px;
   border: none;
   cursor: pointer;
 }
 
 #textarea {
-  margin: 0 0 1px 13px;
-  width: 343px;
+  margin: 0 0 20px 23px;
+  width: 310px;
   height: 117px;
   border-radius: 9px;
   border: 1px solid #cfd8dc;
@@ -416,6 +421,7 @@ nav {
   font-size: 15px;
   line-height: 24px;
   color: #b3bac5;
+  padding: 15px 0 0 15px;
 }
 
 .programming {
@@ -444,21 +450,23 @@ nav {
 }
 
 #name {
-  margin: 0 0 20px 13px;
-  width: 343px;
-  height: 33px;
+  margin: 0 0 20px 23px;
+  width: 310px;
+  height: 45px;
   border-radius: 9px;
   border: 1px solid #cfd8dc;
   background: #fff;
+  padding: 0 0 0 16px;
 }
 
 #email {
-  margin: 0 0 20px 13px;
-  width: 343px;
-  height: 33px;
+  margin: 0 0 20px 23px;
+  width: 310px;
+  height: 45px;
   border-radius: 9px;
   border: 1px solid #cfd8dc;
   background: #fff;
+  padding: 0 0 0 16px;
 }
 
 #email::placeholder,
@@ -469,6 +477,7 @@ nav {
   font-size: 17px;
   line-height: 20px;
   color: #172b4d;
+  padding: auto;
 }
 
 .cardbut {
@@ -574,4 +583,8 @@ button:active,
 
 .contactme img {
   margin: 0 12px 14px 100px;
+}
+
+#form {
+  margin-top: 10px;
 }
